[project]
name = "mcp-client-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.6",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.53.0",
]
